--- a/new-shop.html
+++ b/new-shop.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="index.html">
                     <img src="img/paw.png" class="mb-2" alt="site icon">
-                    <h3 class="text-uppercase fw-lighter ms-2">Happy Pets</h3>
+                    <h5 class="text-uppercase fw-lighter ms-2">Happy Pets</h5>
                 </a>
                 <div class="order-lg-2 nav-btns">
                     <form class="text-end order-lg-3">
@@ -212,6 +212,26 @@
         </div>
     </div>
 </section>
+  
+      <!-- newsletter -->
+    <section id = "newsletter" class = "py-5">
+        <div class = "container">
+            <div class = "d-flex flex-column align-items-center justify-content-center">
+                <div class = "title text-center pt-3 pb-5">
+                    <h2 class = "position-relative d-inline-block ms-4">Newsletter Subscription</h2>
+                </div>
+
+                <p class = "text-center text-muted">Get awesome exclusives and more deals when you subscribe!</p>
+                <div class = "input-group mb-3 mt-3">
+                    <input type = "text" class = "form-control" placeholder="Enter Your Email ...">
+                    <button class = "btn btn-primary" type = "submit">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of newsletter -->
+  
+  
 
   <!---footer -->
     <footer class = "bg-dark py-5">
