--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Pets</title>
+    <title>Services</title>
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -40,7 +40,7 @@
         <div class = "container">
             <a class = "navbar-brand d-flex justify-content-between align-items-center order-lg-0" href = "index.html">
                 <img src = "paw.png" alt= "site icon">
-                <span class = "text-uppercase fw-lighter ms-2">Happy Pets</span>
+                <h5 class="text-uppercase fw-lighter ms-2">Happy Pets</h5>
             </a>
 
             <div class = "order-lg-2 nav-btns">
@@ -67,7 +67,7 @@
                         <a class = "nav-link text-uppercase text-dark" href = "index.html">home</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
-                        <a class = "nav-link text-uppercase text-dark" href = "shop.html">shop</a>
+                        <a class = "nav-link text-uppercase text-dark" href = "new-shop.html">shop</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
                         <a class = "nav-link text-uppercase text-dark" href = "services.html">Services</a>
@@ -79,9 +79,7 @@
                     <li class = "nav-item px-2 py-2">
                         <a class = "nav-link text-uppercase text-dark" href = "contact.html">contact</a>
                     </li>
-                    <li class = "nav-item px-2 py-2 border-0">
-                        <a class = "nav-link text-uppercase text-dark" href = "#popular">book now!</a>
-                    </li>
+                    >
                     
                 </ul>
             </div>
@@ -305,7 +303,23 @@
 </div>
 
 
+   <!-- newsletter -->
+    <section id = "newsletter" class = "py-5">
+        <div class = "container">
+            <div class = "d-flex flex-column align-items-center justify-content-center">
+                <div class = "title text-center pt-3 pb-5">
+                    <h2 class = "position-relative d-inline-block ms-4">Newsletter Subscription</h2>
+                </div>
 
+                <p class = "text-center text-muted">Get awesome exclusives and more deals when you subscribe!</p>
+                <div class = "input-group mb-3 mt-3">
+                    <input type = "text" class = "form-control" placeholder="Enter Your Email ...">
+                    <button class = "btn btn-primary" type = "submit">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of newsletter -->
 
 
 
