--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         <div class = "container">
             <a class = "navbar-brand d-flex justify-content-between align-items-center order-lg-0" href = "index.html">
                 <img src = "paw.png" alt= "site icon">
-                <span class = "text-uppercase fw-lighter ms-2">Happy Pets</span>
+                <h5 class="text-uppercase fw-lighter ms-2">Happy Pets</h5>
             </a>
 
             <div class = "order-lg-2 nav-btns">
@@ -67,7 +67,7 @@
                         <a class = "nav-link text-uppercase text-dark" href = "index.html">home</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
-                        <a class = "nav-link text-uppercase text-dark" href = "shop.html">shop</a>
+                        <a class = "nav-link text-uppercase text-dark" href = "new-shop.html">shop</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
                         <a class = "nav-link text-uppercase text-dark" href = "services.html">Services</a>
@@ -79,10 +79,7 @@
                     <li class = "nav-item px-2 py-2">
                         <a class = "active nav-link text-uppercase text-dark" href = "contact.html">contact</a>
                     </li>
-                    <li class = "nav-item px-2 py-2 border-0">
-                        <a class = "nav-link text-uppercase text-dark" href = "#popular">book now!</a>
-                    </li>
-                    
+                   
                 </ul>
             </div>
         </div>
