--- a/contact.html
+++ b/contact.html
@@ -40,16 +40,12 @@
         <div class = "container">
             <a class = "navbar-brand d-flex justify-content-between align-items-center order-lg-0" href = "index.html">
                 <img src = "paw.png" alt= "site icon">
-                <span class = "text-uppercase fw-lighter ms-2">Happy Pets</span>
+                <h5 class="text-uppercase fw-lighter ms-2">Happy Pets</h5>
             </a>
 
             <div class = "order-lg-2 nav-btns">
                 <button type = "button" class = "btn position-relative">
                     <i class = "fa fa-shopping-cart"></i>
-                    <span class = "position-absolute top-0 start-100 translate-middle badge bg-primary">0</span>
-                </button>
-                <button type = "button" class = "btn position-relative">
-                    <i class = "fa fa-heart"></i>
                     <span class = "position-absolute top-0 start-100 translate-middle badge bg-primary">0</span>
                 </button>
                 <button type = "button" class = "btn position-relative">
