--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
      <nav class = "navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
         <div class = "container">
             <a class = "navbar-brand d-flex justify-content-between align-items-center order-lg-0" href = "index.html">
-                <img src = "paw.png" alt= "site icon">
+                <img src = "img/paw.png" alt= "site icon">
                 <h5 class="text-uppercase fw-lighter ms-2">Happy Pets</h5>
             </a>
 
@@ -121,7 +121,7 @@
         <div class="col-12 col-sm-6 col-md-3 m-auto">
             <!-- card starts here -->
             <div class="card shadow">
-                <img src="hotel02.png" class="card-img-top">
+                <img src="img/hotel02.png" class="card-img-top">
                 <div class="card-body">
                     <h3 class="text-center">Pet Boarding</h3>
                     <hr class="mx-auto w-75">
@@ -138,7 +138,7 @@
         <div class="col-12 col-sm-6 col-md-3 m-auto">
             <!-- card starts here -->
             <div class="card shadow">
-                <img src="petfood.png" alt="" class="card-img-top">
+                <img src="img/petfood.png" alt="" class="card-img-top">
                 <div class="card-body">
                     <h3 class="text-center">Pet Feeding</h3>
                     <hr class="mx-auto w-75">
@@ -155,7 +155,7 @@
         <div class="col-12 col-sm-6 col-md-3 m-auto">
             <!-- card starts here -->
             <div class="card shadow">
-                <img src="dogGroom.webp" alt="" class="card-img-top">
+                <img src="img/dogGroom.webp" alt="" class="card-img-top">
                 <div class="card-body">
                     <h3 class="text-center">Pet Grooming</h3>
                     <hr class="mx-auto w-75">
@@ -172,7 +172,7 @@
         <div class="col-12 col-sm-6 col-md-3 m-auto">
             <!-- card starts here -->
             <div class="card shadow">
-                <img src="petclinic.png" alt="" class="card-img-top">
+                <img src="img/petclinic.png" alt="" class="card-img-top">
                 <div class="card-body">
                     <h3 class="text-center">Pet Care</h3>
                     <hr class="mx-auto w-75">
