--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
      <nav class = "navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
         <div class = "container">
             <a class = "navbar-brand d-flex justify-content-between align-items-center order-lg-0" href = "index.html">
-                <img src = "paw.png" alt= "site icon">
+                <img src = "img/paw.png" alt= "site icon">
                 <h5 class="text-uppercase fw-lighter ms-2">Happy Pets</h5>
             </a>
 
@@ -101,7 +101,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded" src="carousel-1.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded" src="img/carousel-1.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-7">
