--- a/contact.html
+++ b/contact.html
@@ -139,17 +139,17 @@
         </form>
         <div class="people">
             <div>
-                <img src="people1.png" alt="">
+                <img src="img/people1.png" alt="">
                 <p><span>Jhon Doe</span>Marketing Manager<br> Phone: +639291344056
                 <br>Email: vargasmyka8@gmail.com</p>
             </div>
             <div>
-                <img src="people2.png" alt="">
+                <img src="img/people2.png" alt="">
                 <p><span>Jhon Doe</span>Marketing Manager<br> Phone: +639291344056
                 <br>Email: vargasmyka8@gmail.com</p>
             </div>
             <div>
-                <img src="people3.png" alt="">
+                <img src="img/people3.png" alt="">
                 <p><span>Jhon Doe</span>Marketing Manager<br> Phone: +639291344056
                 <br>Email: vargasmyka8@gmail.com</p>
             </div>
