--- a/about.html
+++ b/about.html
@@ -143,21 +143,21 @@
         <h5>Check what they say about us...</h5>
         <div class="cards">
             <div class="card1">
-                <img src="testimonial-1.jpg">
+                <img src="img/testimonial-1.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero corrupti sit eum debitis qui iure quasi, </p>
                 <h2>Marites Dimagiba</h2>
                 <h4>Pet Owner</h4>
                 <i class="fa fa-qoute-left"></i>
             </div>
             <div class="card1">
-                <img src="testimonial-2.jpg">
+                <img src="img/testimonial-2.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero corrupti sit eum debitis qui iure quasi, </p>
                 <h2>Jhon Dosol</h2>
                 <h4>Pet Owner</h4>
                 <i class="fa fa-qoute-left"></i>
             </div>
             <div class="card1">
-                <img src="user.jpg">
+                <img src="img/user.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero corrupti sit eum debitis qui iure quasi,</p>
                 <h2>Crispin Basillo</h2>
                 <h4>Pet Owner</h4>
@@ -174,32 +174,32 @@
 
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="f1.png" alt="">
+            <img src="img/f1.png" alt="">
             <h6>Free Shipping</h6>
 
         </div>
         <div class="fe-box">
-            <img src="f2.png" alt="">
+            <img src="img/f2.png" alt="">
             <h6>Online Order</h6>
 
         </div>
         <div class="fe-box">
-            <img src="f3.png" alt="">
+            <img src="img/f3.png" alt="">
             <h6>Save Money</h6>
 
         </div>
         <div class="fe-box">
-            <img src="f4.png" alt="">
+            <img src="img/f4.png" alt="">
             <h6>Promotion</h6>
 
         </div>
         <div class="fe-box">
-            <img src="f5.png" alt="">
+            <img src="img/f5.png" alt="">
             <h6>Happy Sell</h6>
 
         </div>
         <div class="fe-box">
-            <img src="f6.png" alt="">
+            <img src="img/f6.png" alt="">
             <h6>Support</h6>
 
         </div>
