--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded" src="img/carousel-1.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded" src="img/cats/carousel-1.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -143,21 +143,21 @@
         <h5>Check what they say about us...</h5>
         <div class="cards">
             <div class="card1">
-                <img src="img/testimonial-1.jpg">
+                <img src="img/person/testimonial-1.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero corrupti sit eum debitis qui iure quasi, </p>
                 <h2>Marites Dimagiba</h2>
                 <h4>Pet Owner</h4>
                 <i class="fa fa-qoute-left"></i>
             </div>
             <div class="card1">
-                <img src="img/testimonial-2.jpg">
+                <img src="img/person/testimonial-2.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero corrupti sit eum debitis qui iure quasi, </p>
                 <h2>Jhon Dosol</h2>
                 <h4>Pet Owner</h4>
                 <i class="fa fa-qoute-left"></i>
             </div>
             <div class="card1">
-                <img src="img/user.jpg">
+                <img src="img/person/user.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero corrupti sit eum debitis qui iure quasi,</p>
                 <h2>Crispin Basillo</h2>
                 <h4>Pet Owner</h4>
